@@ -19,6 +19,7 @@
  */
 #include <cmci.h>
 #include <native.h>
+#include <stdlib.h>
 #include <unistd.h>
 #include <stdlib.h>
 #include <string.h>
