@@ -21,6 +21,7 @@
  */
 #include <cmci.h>
 #include <native.h>
+#include <stdlib.h>
 #include <unistd.h>
 #include <stdlib.h>
 #include "show.h"
